# zpld

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md
.cargo/: config.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  release.yml
crates/zpld-framework/: Cargo.toml
crates/zpld-framework/src/: lib.rs
crates/zpld-supervisor/: Cargo.toml
crates/zpld-supervisor/config/: example.toml
crates/zpldctl/: Cargo.toml
docs/: architecture.md  ipc-protocol.md  operations.md  state-store.md  worker-contract.md
docs/requirements/: README.md  phase-1-framework-types.md  phase-2-state-store.md  phase-3-ipc-protocol.md  phase-4-supervisor-core.md  phase-5-udp-counter.md  phase-6-patch-scheduler.md  phase-7-zpldctl.md  phase-8-supervisor-selfpatch.md
packaging/systemd/: zpld-supervisor.service  zpld-supervisor.socket
scripts/: build.sh  dev-setup.sh  release.sh
workers/udp-counter/: Cargo.toml  README.md
workers/udp-counter/config/: example.toml
workers/udp-counter/docker/: Dockerfile  docker-compose.yml  supervisor.toml
